--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
       "start": "node server.js",
       "dev": "nodemon server.js",
-      "test": "jest -i"
+      "test": "jest -i",
+      "build": "psql < sql/physiq.sql"
     },
     "jest": {
       "testPathIgnorePatterns": [
